--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.uproject filter=lfs diff=lfs merge=lfs -text
 *.log filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
