--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+MarsMarine.uproject filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.ini filter=lfs diff=lfs merge=lfs -text
 *.uasset filter=lfs diff=lfs merge=lfs -text
